--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "babel-runtime": "^6.26.0",
     "chalk": "^2.3.2",
     "dotenv": "^5.0.1",
+    "express": "^4.16.2",
+    "html-webpack-plugin": "^3.0.4",
+    "prop-types": "^15.6.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.7",
@@ -26,17 +29,29 @@
     "webpack-dev-server": "^3.1.0"
   },
   "devDependencies": {
+    "autoprefixer": "^8.1.0",
     "babel-core": "^6.26.0",
     "babel-eslint": "^8.2.2",
     "babel-loader": "^7.1.3",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
+    "css-loader": "^0.28.10",
     "eslint": "^4.18.2",
+    "eslint-config-airbnb": "^16.1.0",
+    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-jsx-a11y": "^6.0.2",
+    "eslint-plugin-react": "^7.4.0",
     "html-loader": "^0.5.5",
-    "html-webpack-plugin": "^3.0.4",
-    "webpack": "^4.0.1",
-    "webpack-dev-server": "^3.1.0",
+    "node-sass": "^4.7.2",
+    "postcss-loader": "^2.1.1",
+    "sass-loader": "^6.0.7",
+    "style-loader": "^0.20.2",
     "stylelint": "^9.1.1",
-    "webpack-cli": "^2.0.10"
+    "stylelint-csstree-validator": "^1.2.2",
+    "stylelint-find-rules": "^1.1.1",
+    "stylelint-order": "^0.8.1",
+    "webpack": "^4.0.1",
+    "webpack-cli": "^2.0.10",
+    "webpack-dev-server": "^3.1.0"
   }
 }
