--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "start": "webpack-dev-server --mode development --open",
     "dev": "webpack --mode development",
-    "build": "webpack --mode production"
+    "build": "webpack --mode production",
+    "eslint": "eslint src/**/*.js",
+    "stylelint": "stylelint src/**/*.scss"
   },
   "repository": {
     "type": "git",
@@ -48,6 +50,7 @@
     "sass-loader": "^6.0.7",
     "style-loader": "^0.20.2",
     "stylelint": "^9.1.1",
+    "stylelint-config-recommended": "^2.1.0",
     "stylelint-csstree-validator": "^1.2.2",
     "stylelint-find-rules": "^1.1.1",
     "stylelint-order": "^0.8.1",
