--- a/package.json
+++ b/package.json
@@ -8,7 +8,13 @@
     "dev": "webpack --mode development",
     "build": "webpack --mode production",
     "eslint": "eslint src/**/*.js",
-    "stylelint": "stylelint src/**/*.scss"
+    "stylelint": "stylelint src/**/*.scss",
+    "lint": "npm-run-all eslint stylelint"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "yarn lint"
+    }
   },
   "repository": {
     "type": "git",
@@ -45,7 +51,9 @@
     "eslint-plugin-jsx-a11y": "^6.0.2",
     "eslint-plugin-react": "^7.4.0",
     "html-loader": "^0.5.5",
+    "husky": "^0.15.0-rc.8",
     "node-sass": "^4.7.2",
+    "npm-run-all": "^4.1.2",
     "postcss-loader": "^2.1.1",
     "sass-loader": "^6.0.7",
     "style-loader": "^0.20.2",
