--- a/.eslintrc
+++ b/.eslintrc
@@ -5,7 +5,7 @@
   ],
   "extends" : ["airbnb"],
   "rules": {
-    "comma-dangle": 0,
+    "comma-dangle": 2,
     "no-underscore-dangle": 1,
     "default-case": 0,
     "new-cap": [2, {"capIsNew": false, "newIsCap": true}],
@@ -22,7 +22,13 @@
     "no-use-before-define": 0,
     "react/jsx-no-bind": 0,
     "react/prefer-stateless-function": 0,
-    "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }]
+    "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
+    "jsx-a11y/anchor-is-valid": ["error", {
+      "components": ["Link"],
+      "specialLink": ["to"],
+      "aspects": ["noHref", "invalidHref", "preferButton"]
+      }
+    ]  
   },
   "env": {
     "browser": true,
