--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,6 @@ logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-dist/
 
 # Runtime data
 pids
@@ -32,6 +31,9 @@ bower_components
 
 # Compiled binary addons (http://nodejs.org/api/addons.html)
 build/Release
+dist
+dist/
+/dist/*
 
 # Dependency directories
 node_modules/
