--- a/package.json
+++ b/package.json
@@ -8,10 +8,14 @@
     "dev": "webpack --mode development",
     "build": "webpack --mode production",
     "eslint": "eslint src/**/*.js",
-    "stylelint": "stylelint src/**/*.scss"
+    "stylelint": "stylelint src/**/*.scss",
+    "test": "jest"
   },
-  "lint-staged" :{
-    "*.{js,jsx}": "eslint",
+  "lint-staged": {
+    "*.{js,jsx}": [
+      "eslint",
+      "jest --bail --findRelatedTests"
+    ],
     "*.css": "stylelint",
     "*.scss": "stylelint --syntax=scss"
   },
@@ -58,6 +62,7 @@
     "eslint-plugin-react": "^7.4.0",
     "html-loader": "^0.5.5",
     "husky": "^0.15.0-rc.8",
+    "jest": "^22.4.2",
     "lint-staged": "^7.0.0",
     "node-sass": "^4.7.2",
     "npm-run-all": "^4.1.2",
