--- a/package.json
+++ b/package.json
@@ -13,10 +13,28 @@
   },
   "jest": {
     "bail": true,
-    "verbose": true
+    "verbose": true,
+    "collectCoverage": true,
+    "collectCoverageFrom": [
+      "src/**/*.js",
+      "!**/node_modules/**",
+      "!**/dist/**"
+    ],
+    "coverageDirectory": "coverage/",
+    "coverageThreshold": {
+      "global": {
+        "branches": 20,
+        "functions": 20,
+        "lines": 20,
+        "statements": 20
+      }
+    },
+    "moduleNameMapper": {
+      "\\.(css|scss)$": "identity-obj-proxy"
+    }
   },
   "lint-staged": {
-    "*.{js,jsx}": [
+    "*.js": [
       "eslint",
       "jest --bail --findRelatedTests"
     ],
@@ -59,6 +77,8 @@
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^0.28.10",
+    "enzyme": "^3.3.0",
+    "enzyme-adapter-react-16": "^1.1.1",
     "eslint": "^4.18.2",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-plugin-import": "^2.7.0",
@@ -66,11 +86,13 @@
     "eslint-plugin-react": "^7.4.0",
     "html-loader": "^0.5.5",
     "husky": "^0.15.0-rc.8",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^22.4.2",
     "lint-staged": "^7.0.0",
     "node-sass": "^4.7.2",
     "npm-run-all": "^4.1.2",
     "postcss-loader": "^2.1.1",
+    "react-test-renderer": "^16.2.0",
     "sass-loader": "^6.0.7",
     "style-loader": "^0.20.2",
     "stylelint": "^9.1.1",
