--- a/package.json
+++ b/package.json
@@ -9,16 +9,51 @@
     "build": "webpack --mode production",
     "eslint": "eslint src/**/*.js",
     "stylelint": "stylelint src/**/*.scss",
-    "lint": "npm-run-all eslint stylelint"
+    "lint": "npm-run-all eslint stylelint",
+    "test": "jest --coverage",
+    "test:all": "npm-run-all lint test",
+    "coveralls": "cat ./coverage/lcov.info | coveralls"
+  },
+  "jest": {
+    "bail": true,
+    "verbose": true,
+    "collectCoverage": false,
+    "collectCoverageFrom": [
+      "src/**/*.js",
+      "!**/node_modules/**",
+      "!**/dist/**",
+      "!src/client/index.js",
+      "!src/server/index.js"
+    ],
+    "coverageDirectory": "coverage/",
+    "coverageThreshold": {
+      "global": {
+        "branches": 65,
+        "functions": 65,
+        "lines": 65,
+        "statements": 65
+      }
+    },
+    "moduleNameMapper": {
+      "\\.(css|scss)$": "identity-obj-proxy"
+    }
+  },
+  "lint-staged": {
+    "*.js": [
+      "eslint",
+      "jest --bail --findRelatedTests"
+    ],
+    "*.css": "stylelint",
+    "*.scss": "stylelint --syntax=scss"
   },
   "husky": {
     "hooks": {
-      "pre-commit": "yarn lint"
+      "pre-commit": "lint-staged"
     }
   },
   "repository": {
     "type": "git",
-    "url": "?.git"
+    "url": "https://github.com/cezarystefanski/cs-praca-inzynierska.git"
   },
   "author": "Cezary Stefanski",
   "license": "MIT",
@@ -46,7 +81,10 @@
     "babel-loader": "^7.1.3",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
+    "coveralls": "^3.0.0",
     "css-loader": "^0.28.10",
+    "enzyme": "^3.3.0",
+    "enzyme-adapter-react-16": "^1.1.1",
     "eslint": "^4.18.2",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-plugin-import": "^2.7.0",
@@ -54,9 +92,13 @@
     "eslint-plugin-react": "^7.4.0",
     "html-loader": "^0.5.5",
     "husky": "^0.15.0-rc.8",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^22.4.2",
+    "lint-staged": "^7.0.0",
     "node-sass": "^4.7.2",
     "npm-run-all": "^4.1.2",
     "postcss-loader": "^2.1.1",
+    "react-test-renderer": "^16.2.0",
     "sass-loader": "^6.0.7",
     "style-loader": "^0.20.2",
     "stylelint": "^9.1.1",
